--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\ManualM
+copy.src.target=C:\\Users\\marco\\OneDrive - CastroCarazo\\Universidad\\6. CUATRIMESTRE\\PROGRAMACI\u00d3N DE COMPUTADORAS 3\\PROYECTOS\\ManualM\\ManualM
 index.file=index.php
 run.as=LOCAL
 url=http://localhost/ManualM/
