--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,26 @@
+auxiliary.org-netbeans-modules-php-apigen.accessLevels=public,protected
+auxiliary.org-netbeans-modules-php-apigen.charsets=UTF-8
+auxiliary.org-netbeans-modules-php-apigen.config=
+auxiliary.org-netbeans-modules-php-apigen.deprecated=false
+auxiliary.org-netbeans-modules-php-apigen.download=false
+auxiliary.org-netbeans-modules-php-apigen.enabled=true
+auxiliary.org-netbeans-modules-php-apigen.excludes=
+auxiliary.org-netbeans-modules-php-apigen.hasConfig=false
+auxiliary.org-netbeans-modules-php-apigen.internal=false
+auxiliary.org-netbeans-modules-php-apigen.php=true
+auxiliary.org-netbeans-modules-php-apigen.sourceCode=true
+auxiliary.org-netbeans-modules-php-apigen.target=
+auxiliary.org-netbeans-modules-php-apigen.title=ManualM
+auxiliary.org-netbeans-modules-php-apigen.todo=false
+auxiliary.org-netbeans-modules-php-apigen.tree=true
+auxiliary.org-netbeans-modules-php-phpdoc.configuration_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpdoc.configuration_2e_path=
+auxiliary.org-netbeans-modules-php-phpdoc.target=
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\Users\\marco\\OneDrive - CastroCarazo\\Universidad\\6. CUATRIMESTRE\\PROGRAMACI\u00d3N DE COMPUTADORAS 3\\PROYECTOS\\ManualM\\ManualM
-index.file=index.php
-run.as=LOCAL
-url=http://localhost/ManualM/
+hostname=localhost
+include.path.private=
+port=8000
+run.as=INTERNAL
+url=http://localhost:8000/
