--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,13 @@
-include.path=${php.global.include.path}
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+browser.reload.on.save=true
+code.analysis.excludes=
+ignore.path=
+include.path=\
+    ${php.global.include.path}
 php.version=PHP_82
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
+testing.providers=
 web.root=.
